<resources>
    <string name="app_name">Samaritan Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="trainer_img">trainer_img</string>
    <string name="foes">Foes</string>
    <string name="pokemon_img">pokemon_img</string>
    <string name="basic_info">Basic Info</string>
    <string name="moves">Moves</string>
    <string name="found_in">Found In</string>
    <string name="capture">Capture</string>
    <string name="assign_name">Assign a Name?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name_place_holder">Name: %1$s</string>
    <string name="name">Name: </string>
    <string name="types">Types:</string>
    <string name="captured_by_placeholder">Captured by %1$s</string>
    <string name="captured_on_placeholder">Captured on %1$s</string>
    <string name="time_captured_placeholder">On %1$s</string>
    <string name="capture_in">Capture In</string>
    <string name="captured">captured</string>
    <string name="please_turn_wifi_on">Please turn WiFi on</string>
    <string name="refresh">Refresh</string>
</resources>