<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assign_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_big" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_very_small">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_weight="3"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_normal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_input"
            style="@style/ThemeOverlay.Material3.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="@dimen/txt_size_normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_very_small">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_normal"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_normal" />
    </LinearLayout>
</LinearLayout>